当前分支已升级到 Java 21、不再兼容 JDK 8；数据面板新增 SQLite 持久化、手动保存/自动保存、按时间戳标签查看历史、字段级持久化